# QilletniDocs

./: 404.html  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: deploy.yml
docs/: CNAME  examples.md  index.md  package_configs.md  project_structure.md  test.md
docs/css/: extra.css  playlist_visual.css
docs/js/: hljs-init.js  hljs-qilletni.js  playlist_visual.js
docs/language/: documenting_code.md  introduction.md  service_providers.md
docs/language/syntax/: extension_functions.md  operators.md
docs/language/types/: built_in_types.md  entities.md  (+1 more)
docs/misc/: hosting_docs.md
docs/native_binding/: background_tasks.md  introduction.md  native_bind_factories.md  native_functions.md
docs/quickstart/: getting_started.md  lastfm_integration.md  spotify_integration.md
examples/: index.html
graphic/: index.html  style.css
language/documenting_code/: index.html
language/introduction/: index.html
language/service_providers/: index.html
misc/hosting_docs/: index.html
native_binding/background_tasks/: index.html
native_binding/introduction/: index.html
native_binding/native_bind_factories/: index.html
native_binding/native_functions/: index.html
native_binding/usage_examples/: index.html
package_configs/: index.html
project_structure/: index.html
qilletni-docs/docs/: index.md
qilletni-pygments-lexer/: pyproject.toml  qilletni_lexer.py
quickstart/getting_started/: index.html
quickstart/lastfm_integration/: index.html
quickstart/spotify_integration/: index.html
search/: search_index.json
test/: index.html
(+13 files in other folders)
