[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qilletni-pygments-lexer"
version = "0.1.0"
description = "A Pygments lexer for the Qilletni DSL"
authors = [
    { name="Your Name", email="you@example.com" }
]
dependencies = ["Pygments>=2.0"]

[project.urls]
"Source" = "https://github.com/RubbaBoy/Qilletni/qilletni-pygments-lexer"

[project.entry-points."pygments.lexers"]
qilletni = "qilletni_lexer:QilletniLexer"
